[package]
name = "write-json"
description = "Simple {dependency,trait,macro}-less JSON serialization"
version = "0.1.4"
repository = "https://github.com/matklad/write-json"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

keywords = ["json", "serialization"]
categories = ["encoding"]

exclude = [".github/"]

[workspace]
members = ["xtask"]
